--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html>
   <head></head>
   <body>
-    <h3>Active Arenas <a id="create-arena-btn">[Create New]</a></h3>
-    <div id="active-arenas-list">
-    </div>
+    <div id="app"></div>
 
-    <script src="client.js" type="text/javascript"></script>
+    <!-- <h3>Active Arenas <a id="create-arena-btn">[Create New]</a></h3>
+    <div id="active-arenas-list">
+    </div> -->
+
+    <script src="/js/dist.js"></script>
 
     <script>
       let ws = new WebSocket(`ws://localhost:8080`);
